# pure-rust-aec

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.venv-melaec3/: pyvenv.cfg
examples/: cpal_aec.rs  cpal_example.rs  listen.py
python/melaec3/: __init__.py
src/: cpal_aec.rs  lib.rs  pywrapper.rs
src/c2rust/: fftwrap.rs  kiss_fft.rs  kiss_fftr.rs  mdf.rs  mod.rs  resample.rs  smallft.rs
tests/: gcc_phat_delay.rs  multichannel_speex.rs
